# md-to-confluence

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.json  debug_converter.py  example.config.json  main.py  pyproject.toml  pytest.ini  tasks-done.md  tasks-list.md
.cursor/rules/: md-to-confluence.mdc
.github/workflows/: test.yml
docs/: md-to-confluence project.md  test.md
src/: __init__.py  config.py
src/confluence/: __init__.py  client.py  converter.py
src/monitor/: __init__.py  file_watcher.py
src/sync/: __init__.py  conflict_detector.py  engine.py  state.py
src/ui/: __init__.py  app.py
src/ui/widgets/: __init__.py  conflict_widget.py
tests/: test_config.py  test_conflict_detection.py  test_conflict_widget.py  test_conflict_widget.py.bak  test_conflict_widget.py.bak2  test_confluence_client.py  test_confluence_conflict_detection.py  test_file_watcher.py  test_integration.py  test_markdown_converter.py  test_sync_engine.py  test_sync_engine_conflicts.py  test_sync_state.py  test_ui_app.py
